--- a/producer/package.json
+++ b/producer/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
